--- a/templates/stadiums.html
+++ b/templates/stadiums.html
@@ -39,15 +39,9 @@
         <div class="row mt-4 ">
             <div class="col-sm-6">
                 <div id="exampleModal" tabindex="-1">
-                    <div>
-                        <div>
-                            <div>
-                                <h3 id="marker_title" class=""></h3>
-                                <p id="marker_city" class=""></p>
-                                <img id="marker_content">
-                            </div>
-                        </div>
-                    </div>
+                    <h3 id="marker_title" class=""></h3>
+                    <p id="marker_city" class=""></p>
+                    <img id="marker_content">
                 </div>
             </div>
             <div class="col-sm-6 float-right">
@@ -62,43 +56,9 @@
                 <div id='map'></div>
                 <script>
                     var data = JSON.parse('{{stadiums}}'.replace(/&quot;/g, '"').replace(/&#39;/g, ""));
-                    console.log(data);
-                    var apiKey = '{{secretToken}}';
-                    var mapCenter = [55.715765, 37.551521708]
-
-                    L.mapbox.accessToken = apiKey;
-
-                    var map = L.mapbox.map('map', 'mapbox.dark', {
-                        zoomControl: true
-                    }).setView([mapCenter[0], mapCenter[1]], 3);
-
-                    map.touchZoom.disable();
-
-                    var markers = L.mapbox.featureLayer().addTo(map);
-                    markers.setGeoJSON(data);
-                    markers.on('click', function (e) {
-                        e.layer.closePopup();
-
-                        var feature = e.layer.feature;
-                        var title = feature.properties.title;
-                        var content = feature.properties.description;
-                        var city = feature.properties.address;
-
-                        $("#marker_title").text(title);
-                        $("#marker_city").text(city);
-                        $("#marker_content").attr('src', content);
-                        $("#marker_content").attr('style', "width: 500px; height:400px");
-                    });
-
-                    $('.menu-ui a').on('click', function () {
-                        var filter = $(this).data('filter');
-                        $(this).addClass('active').siblings().removeClass('active');
-                        markers.setFilter(function (f) {
-                            return (filter === 'all') ? true : f.properties[filter] === true;
-                        });
-                        return false;
-                    });
+                    var secretToken = '{{secretToken}}';
                 </script>
+                <script src="{%static 'js/stadiums.js'%}"></script>
             </div>
         </div>
     </div>
