--- a/templates/teams.html
+++ b/templates/teams.html
@@ -38,67 +38,16 @@
     <div class="container-fluid">
         <div class="row mt-4 ">
             <div class="col-sm-6">
-                <div id="exampleModal" tabindex="-1">
-                    <div>
-                        <div>
-                            <div>
-                                <h3 id="marker_title" class=""></h3>
-                                <p id="marker_city" class=""></p>
-                                <img id="marker_content">
-                            </div>
-                        </div>
-                    </div>
+                <div id="flagcards" class="row filt" style="zoom:75%">
                 </div>
             </div>
-            <div class="col-sm-6 float-right">
-                <nav class='menu-ui'>
-                    <a href='#' class='active' data-filter='all'>Show all</a>
-                    <a href='#' data-filter='water'>Water Recreation</a>
-                    <a href='#' data-filter='outdoor'>Outdoor Recreation</a>
-                    <a href='#' data-filter='civil'>Civil War</a>
-                    <a href='#' data-filter='wildlife'>Wildlife</a>
-                    <a href='#' data-filter='heritage'>Heritage & Culture</a>
-                </nav>
+            <div class="col-sm-6 float-right" style="zoom:85%">
                 <div id='map'></div>
                 <script>
                     var data = JSON.parse('{{teams}}'.replace(/&quot;/g, '"').replace(/&#39;/g, ""));
-                    console.log(data);
-                    var apiKey = '{{secretToken}}';
-                    var mapCenter = [55.715765, 37.551521708]
-
-                    L.mapbox.accessToken = apiKey;
-
-                    var map = L.mapbox.map('map', 'mapbox.dark', {
-                        zoomControl: true
-                    }).setView([mapCenter[0], mapCenter[1]], 1);
-
-                    map.touchZoom.disable();
-
-                    var markers = L.mapbox.featureLayer().addTo(map);
-                    markers.setGeoJSON(data);
-                    markers.on('click', function (e) {
-                        e.layer.closePopup();
-
-                        var feature = e.layer.feature;
-                        var title = feature.properties.title;
-                        var content = feature.properties.description;
-                        var city = feature.properties.address;
-
-                        $("#marker_title").text(title);
-                        $("#marker_city").text(city);
-                        $("#marker_content").attr('src', content);
-                        $("#marker_content").attr('style', "width: 500px; height:400px");
-                    });
-
-                    $('.menu-ui a').on('click', function () {
-                        var filter = $(this).data('filter');
-                        $(this).addClass('active').siblings().removeClass('active');
-                        markers.setFilter(function (f) {
-                            return (filter === 'all') ? true : f.properties[filter] === true;
-                        });
-                        return false;
-                    });
+                    var secretToken = '{{secretToken}}';
                 </script>
+                <script src='{%static "js/teams.js"%}'></script>
             </div>
         </div>
     </div>
