--- a/templates/channels.html
+++ b/templates/channels.html
@@ -27,6 +27,12 @@
                     Channels
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/matches/">
+                  <span class='fa fa-futbol fa-lg'></span>
+                  Matches
+                </a>
+            </li>
         </ul>
         {%if request.user.is_authenticated%}
         <a href="/logout/" style="margin-left:900px">
