--- a/templates/home.html
+++ b/templates/home.html
@@ -20,8 +20,7 @@
 </head>
 
 {%block head%}
-
-<body>
+<body background="{%static 'images/home_page/background.jpg'%}">
   <nav class="navbar navbar-expand-sm bg-dark">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -48,82 +47,25 @@
           Channels
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/matches/">
+          <span class='fa fa-futbol fa-lg'></span>
+          Matches
+        </a>
+      </li>
     </ul>
     {%if request.user.is_authenticated%}
     <a href="logout/" style="margin-left:900px">
       <span class="fa fa-sign-out-alt fa-lg"></span>
       Logout
     </a>
+    {%else%}
+    <a href="loging/" style="margin-left:900px">
+      <span class="fa fa-sign-in-alt fa-lg"></span>
+      Login
+    </a>
     {% endif %}
   </nav>
-  <div class="container-fluid">
-    <div class="row mt-4 ">
-      <div class="col-sm-6">
-        <div id="exampleModal" tabindex="-1">
-          <div>
-            <div>
-              <div>
-                <h3 id="marker_title" class=""></h3>
-                <p id="marker_city" class=""></p>
-                <img id="marker_content">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 float-right">
-        <nav class='menu-ui'>
-          <a href='#' class='active' data-filter='all'>Show all</a>
-          <a href='#' data-filter='water'>Water Recreation</a>
-          <a href='#' data-filter='outdoor'>Outdoor Recreation</a>
-          <a href='#' data-filter='civil'>Civil War</a>
-          <a href='#' data-filter='wildlife'>Wildlife</a>
-          <a href='#' data-filter='heritage'>Heritage & Culture</a>
-        </nav>
-        <div id='map'></div>
-        <script>
-          var data = JSON.parse('{{stadiums}}'.replace(/&quot;/g, '"').replace(/&#39;/g, ""));
-          console.log(data);
-          var apiKey = '{{secretToken}}';
-          var mapCenter = [55.715765, 37.551521708]
-
-          L.mapbox.accessToken = apiKey;
-
-          var map = L.mapbox.map('map', 'mapbox.dark', {
-            zoomControl: true
-          }).setView([mapCenter[0], mapCenter[1]], 3);
-
-          map.touchZoom.disable();
-
-          var markers = L.mapbox.featureLayer().addTo(map);
-          markers.setGeoJSON(data);
-          markers.on('click', function (e) {
-            e.layer.closePopup();
-
-            var feature = e.layer.feature;
-            var title = feature.properties.title;
-            var content = feature.properties.description;
-            var city = feature.properties.address;
-
-            $("#marker_title").text(title);
-            $("#marker_city").text(city);
-            $("#marker_content").attr('src', content);
-            $("#marker_content").attr('style', "width: 500px; height:400px");
-          });
-
-          $('.menu-ui a').on('click', function () {
-            var filter = $(this).data('filter');
-            $(this).addClass('active').siblings().removeClass('active');
-            markers.setFilter(function (f) {
-              return (filter === 'all') ? true : f.properties[filter] === true;
-            });
-            return false;
-          });
-        </script>
-      </div>
-    </div>
-  </div>
 </body>
 {%endblock%}
-
 </html>
