--- a/templates/stadiums.html
+++ b/templates/stadiums.html
@@ -27,6 +27,12 @@
                     Channels
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/matches/">
+                  <span class='fa fa-futbol fa-lg'></span>
+                  Matches
+                </a>
+            </li>
         </ul>
         {%if request.user.is_authenticated%}
         <a href="/logout/" style="margin-left:900px">
@@ -45,14 +51,6 @@
                 </div>
             </div>
             <div class="col-sm-6 float-right">
-                <nav class='menu-ui'>
-                    <a href='#' class='active' data-filter='all'>Show all</a>
-                    <a href='#' data-filter='water'>Water Recreation</a>
-                    <a href='#' data-filter='outdoor'>Outdoor Recreation</a>
-                    <a href='#' data-filter='civil'>Civil War</a>
-                    <a href='#' data-filter='wildlife'>Wildlife</a>
-                    <a href='#' data-filter='heritage'>Heritage & Culture</a>
-                </nav>
                 <div id='map'></div>
                 <script>
                     var data = JSON.parse('{{stadiums}}'.replace(/&quot;/g, '"').replace(/&#39;/g, ""));
