--- a/static/app/css/home.css
+++ b/static/app/css/home.css
@@ -31,7 +31,7 @@ a:hover{
 
 #map{
     width: 100%;
-    height: 600px;
+    height: 800px;
     position: relative;
   }
   
@@ -142,3 +142,8 @@ main{
       border-top:1px solid #aaa;
     }
   
+.modal-body{
+  background-color:darkslategray;
+  color:whitesmoke;
+  align-items: center;
+}
