--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
       Logout
     </a>
     {%else%}
-    <a href="loging/" style="margin-left:900px">
+    <a href="login/" style="margin-left:900px">
       <span class="fa fa-sign-in-alt fa-lg"></span>
       Login
     </a>
