--- a/static/css/home.css
+++ b/static/css/home.css
@@ -11,20 +11,139 @@ a:hover{
     color:aqua;
 }
 
+.navbar{
+    zoom:85%;
+}
+
+.flagactive{
+    background-color:darkslategray;
+}
+
 .formcard{
     background-color: darkslategray !important;
     color:white !important;
 }
 
-nav{
-    background-color: darkslategray;
-}
-
-body{
-    background-color:black;
-}
-
 .register-card{
     background-color:darkslategrey;
     color: white;
+}
+
+#map{
+    width: 100%;
+    height: 800px;
+    position: relative;
+  }
+  
+
+.menu-ui {
+background:#fff;
+position:absolute;
+top:100px;
+left:10px;
+z-index:1;
+border-radius:3px;
+width:120px;
+border:1px solid rgba(0,0,0,0.4);
+}
+.menu-ui a {
+    font-size:13px;
+    color:#404040;
+    display:block;
+    margin:0;padding:0;
+    padding:10px;
+    text-decoration:none;
+    border-bottom:1px solid rgba(0,0,0,0.25);
+    text-align:center;
+    }
+    .menu-ui a:first-child {
+    border-radius:3px 3px 0 0;
+    }
+    .menu-ui a:last-child {
+    border:none;
+    border-radius:0 0 3px 3px;
+    }
+    .menu-ui a:hover {
+    background:#f8f8f8;
+    color:#404040;
+    cursor: pointer !important;
+    }
+    .menu-ui a.active,
+    .menu-ui a.active:hover {
+    background:#3887BE;
+    color:#FFF;
+    }
+
+.info {
+position:absolute;
+top:100px;
+left:10px;
+}
+.info div {
+background:#fff;
+padding:10px;
+border-radius:3px;
+}
+
+
+/*
+ *  Flex Layout Specifics
+*/
+main{
+    display:flex;
+    flex-direction:row;
+  }
+  .round{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    width:200px;
+    list-style:none;
+    padding:0;
+  }
+    .round .spacer{ flex-grow:1; }
+    .round .spacer:first-child,
+    .round .spacer:last-child{ flex-grow:.5; }
+  
+    .round .game-spacer{
+      flex-grow:1;
+    }
+  
+  /*
+   *  General Styles
+  */
+  body{
+    font-family:sans-serif;
+    font-size:small;
+    padding:10px;
+    line-height:1.4em;
+  }
+  
+  li.game{
+    padding-left:20px;
+  }
+  
+    li.game.winner{
+      font-weight:bold;
+    }
+    li.game span{
+      float:right;
+      margin-right:5px;
+    }
+  
+    li.game-top{ border-bottom:1px solid #aaa; }
+  
+    li.game-spacer{ 
+      border-right:1px solid #aaa;
+      min-height:40px;
+    }
+  
+    li.game-bottom{ 
+      border-top:1px solid #aaa;
+    }
+  
+.modal-body{
+  background-color:darkslategray;
+  color:whitesmoke;
+  align-items: center;
 }
