--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,56 +1,54 @@
-{%extends 'home.html' %}
-{%load static%}
+{%extends 'home.html' %} {%load static%}
 
-
+<script src="{%static 'js/login.js'%}"></script> 
 
 {%block head%}
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/" >
-              <span class='fa fa-home fa-lg'></span>
-              Home
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span class='fa fa-users fa-lg'></span>
-              Teams
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span class='fa fa-road fa-lg'></span>
-              Stadiums
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="container mt-4">
-        <div class="row justify-content-center">
-          <div class="col-sm-4">
-            <div class="formcard card" >
-                <div class="card-header">
-                    <span class="fa fa-sign-in-alt fa-lg"></span>
-                    Login to Continue!
-                </div>  
-              <div class="card-body">
-                <form method='POST'> {%csrf_token%}
-                    {{content}}
-                    <br>
-                    Dont have an account? 
-                    <a href="/register" style="color:lightblue;">
-                        Create one
-                    </a> 
-                    <button class="btn btn-dark mt-4" type="submit">
-                      login
-                    </button>
-                </form>
-              </div>
-            </div>
+
+<body background="{%static 'images/home_page/background.jpg'%}">
+  <nav class="navbar navbar-expand-sm bg-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/">
+          <span class='fa fa-home fa-lg'></span>
+          Home
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <span class='fa fa-users fa-lg'></span>
+          Teams
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <span class='fa fa-road fa-lg'></span>
+          Stadiums
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+      <div class="col-sm-4">
+        <div class="formcard card">
+          <div class="card-header">
+            <span class="fa fa-sign-in-alt fa-lg"></span>
+            Login to Continue!
+          </div>
+          <div class="card-body">
+            <form method='POST'> {%csrf_token%} {{content}}
+              <br> Dont have an account?
+              <a href="/register" style="color:lightblue;">
+                Create one
+              </a>
+              <button class="btn btn-dark mt-4" type="submit">
+                login
+              </button>
+            </form>
           </div>
         </div>
+      </div>
     </div>
+  </div>
 </body>
 {%endblock%}
