--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,59 +1,45 @@
-{% extends 'home.html' %}
-{%load static%}
+{% extends 'home.html' %} {%load static%}
+
+<script src="{%static 'js/register.js'%}"></script>
 
 {%block head%}
-<body>
+
+<body background="{%static 'images/home_page/background.jpg'%}">
     <nav class="navbar navbar-expand-sm bg-dark">
         <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link navactive" href="/" >
-            <span class='fa fa-home fa-lg'></span>
-            Home
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">
-            <span class='fa fa-users fa-lg'></span>
-            Teams
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">
-            <span class='fa fa-road fa-lg'></span>
-            Stadiums
-            </a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link navactive" href="/">
+                    <span class='fa fa-home fa-lg'></span>
+                    Home
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <span class='fa fa-users fa-lg'></span>
+                    Teams
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <span class='fa fa-road fa-lg'></span>
+                    Stadiums
+                </a>
+            </li>
         </ul>
     </nav>
     <div class="container mt-4">
         <div class="row">
             <div class="col-sm-4">
-                <div class="card  formcard" > 
+                <div class="card  formcard">
                     <div class="card-header">
                         Register
-                    </div> 
+                    </div>
                     <div class="card-body">
-                        <form method='POST'> {%csrf_token%}
-                            {{form}}
+                        <form method='POST'> {%csrf_token%} {{form}}
                             <button class="btn btn-dark mt-4" type="submit">
                                 Register
                             </button>
                         </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-5">
-                <div class="card register-card" > 
-                    <div class="card-header">
-                        Nostalgic tour to FIFA World Cup 2018!
-                    </div> 
-                    <img src="{%static '/images/register_page/fifa.jpg'%}" class="card-img-top"  alt="Fifa 2018">
-                    <div class="card-body">    
-                        <p class="card-text">The 2018 FIFA World Cup was the 21st FIFA World Cup, an international football tournament contested by the 
-                            men's national teams of the member associations of FIFA once every four years. It took place in Russia from 
-                            14 June to 15 July 2018. It was the first World Cup to be held in Eastern Europe, and the 11th time that it 
-                            shad been held in Europe.</p>
                     </div>
                 </div>
             </div>
