--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,7 @@
 </head>
 
 {%block head%}
+
 <body background="{%static 'images/home_page/background.jpg'%}">
   <nav class="navbar navbar-expand-sm bg-dark">
     <ul class="navbar-nav">
@@ -66,6 +67,26 @@
     </a>
     {% endif %}
   </nav>
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="card register-card">
+          <div class="card-header">
+            Nostalgic tour to FIFA World Cup 2018!
+          </div>
+          <img src="{%static '/images/register_page/fifa.jpg'%}" class="card-img-top" alt="Fifa 2018">
+          <div class="card-body">
+            <p class="card-text">The 2018 FIFA World Cup was the 21st FIFA World Cup, an international football tournament
+              contested by the men's national teams of the member associations of FIFA once every four years. It took place
+              in Russia from 14 June to 15 July 2018. It was the first World Cup to be held in Eastern Europe, and the 11th
+              time that it shad been held in Europe.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 </body>
 {%endblock%}
+
 </html>
