--- a/static/app/css/home.css
+++ b/static/app/css/home.css
@@ -1,78 +1,137 @@
 a{
-    text-decoration: none !important;
-    color:white;
+  text-decoration: none !important;
+  color:white;
+  font-size: 1.2em;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
 }
 
 a:hover{
-    color:black;
+  color: #dbd45e;
 }
 
 .navactive{
-    color:aqua;
+  color:#a4bbda;
 }
 
-.navbar{
-    zoom:85%;
+.nav-item
+{
+text-align: center;
+padding-left: 15px;
+}
+
+.navbar
+{
+background-color: #64524f;
+}
+
+.stadium-back
+{
+  background-color: #404040;
 }
 
 .flagactive{
-    background-color:darkslategray;
+  background-color:rgb(78, 33, 33);
 }
 
+.flagcard{
+  margin: 10px !important;
+}
+
+.stadium-card .card-img-top
+{
+ width: 500px;
+}
+
+.stadium-text
+{
+  text-align: center;
+  font-weight: bold;
+  color: maroon;
+}
+
+
+
 .formcard{
-    background-color: darkslategray !important;
-    color:white !important;
+  color:white !important;
+  margin-top: 80px;
+}
+
+.formcard .card-body
+{
+  background-color: #64524f;
+}
+
+.formcard .card-header 
+{
+  background-color: #64524f;
+}
+
+.formcard .card-body .a 
+{
+  align-items: center;
+  align-self: center;
 }
 
 .register-card{
-    background-color:darkslategrey;
-    color: white;
+  background-color:#64524f;
+  color: white;
 }
 
+
 #map{
-    width: 100%;
-    height: 800px;
-    position: relative;
-  }
-  
+  width: 100%;
+  height: 800px;
+  position: relative;
+}
+
 
 .menu-ui {
 background:#fff;
 position:absolute;
 top:100px;
 left:10px;
+margin-left:40px;
 z-index:1;
 border-radius:3px;
 width:120px;
 border:1px solid rgba(0,0,0,0.4);
 }
 .menu-ui a {
-    font-size:13px;
-    color:#404040;
-    display:block;
-    margin:0;padding:0;
-    padding:10px;
-    text-decoration:none;
-    border-bottom:1px solid rgba(0,0,0,0.25);
-    text-align:center;
-    }
-    .menu-ui a:first-child {
-    border-radius:3px 3px 0 0;
-    }
-    .menu-ui a:last-child {
-    border:none;
-    border-radius:0 0 3px 3px;
-    }
-    .menu-ui a:hover {
-    background:#f8f8f8;
-    color:#404040;
-    cursor: pointer !important;
-    }
-    .menu-ui a.active,
-    .menu-ui a.active:hover {
-    background:#3887BE;
-    color:#FFF;
-    }
+  font-size:13px;
+  color:#404040;
+  display:block;
+  margin:0;padding:0;
+  padding:10px;
+  text-decoration:none;
+  border-bottom:1px solid rgba(0,0,0,0.25);
+  text-align:center;
+  }
+  .menu-ui a:first-child {
+  border-radius:3px 3px 0 0;
+  }
+  .menu-ui a:last-child {
+  border:none;
+  border-radius:0 0 3px 3px;
+  }
+  .menu-ui a:hover {
+  background:#f8f8f8;
+  color:#404040;
+  cursor: pointer !important;
+  }
+  .menu-ui a.active,
+  .menu-ui a.active:hover {
+  background:#64524f;
+  color:#FFF;
+  }
+
+.tournament{
+  border-radius: 12px;
+  background-color:#111111 ;
+  color:white;
+  padding:6px;
+}
 
 .info {
 position:absolute;
@@ -80,74 +139,84 @@ top:100px;
 left:10px;
 }
 .info div {
-background:#fff;
+background:#ffff;
 padding:10px;
 border-radius:3px;
 }
 
+.center{
+  text-align: center;
+  display: block;
+}
 
-/*
- *  Flex Layout Specifics
-*/
 main{
-    display:flex;
-    flex-direction:row;
+  display:flex;
+  flex-direction:row;
+}
+.round{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  width:200px;
+  list-style:none;
+  padding:0;
+}
+  .round .spacer{ flex-grow:1; }
+  .round .spacer:first-child,
+  .round .spacer:last-child{ flex-grow:.5; }
+
+  .round .game-spacer{
+    flex-grow:1;
   }
-  .round{
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    width:200px;
-    list-style:none;
-    padding:0;
+
+
+body{
+
+  font-family:sans-serif;
+  font-size:small;
+  line-height:1.4em;
+  background-attachment: fixed;
+
+}
+
+li.game{
+  padding-left:20px;
+}
+
+  li.game.winner{
+    font-weight:bold;
   }
-    .round .spacer{ flex-grow:1; }
-    .round .spacer:first-child,
-    .round .spacer:last-child{ flex-grow:.5; }
-  
-    .round .game-spacer{
-      flex-grow:1;
-    }
-  
-  /*
-   *  General Styles
-  */
-  body{
-    font-family:sans-serif;
-    font-size:small;
-    padding:10px;
-    line-height:1.4em;
+  li.game span{
+    float:right;
+    margin-right:5px;
   }
-  
-  li.game{
-    padding-left:20px;
+
+  li.game-top{ border-bottom:1px solid #aaa; }
+
+  li.game-spacer{ 
+    border-right:1px solid #aaa;
+    min-height:40px;
   }
-  
-    li.game.winner{
-      font-weight:bold;
-    }
-    li.game span{
-      float:right;
-      margin-right:5px;
-    }
-  
-    li.game-top{ border-bottom:1px solid #aaa; }
-  
-    li.game-spacer{ 
-      border-right:1px solid #aaa;
-      min-height:40px;
-    }
-  
-    li.game-bottom{ 
-      border-top:1px solid #aaa;
-    }
-  
+
+  li.game-bottom{ 
+    border-top:1px solid #aaa;
+  }
+
 .modal-body{
-  background-color:darkslategray;
-  color:whitesmoke;
-  align-items: center;
+background-color: rgb(160, 157, 157);
+color:black;
+align-items: center;
 }
 
 #channelcards{
-  color: black;
+color: black;
+}
+
+.comments{ 
+  background-color: #404040;
+  margin-left:15px;
+  padding: 10px;
+  border: 1px solid gainsboro; 
+  border-radius: 10px;
+  color:floralwhite;
 }
