--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,11 +1,9 @@
 {%extends 'home.html' %} {%load static%}
 
-<script src="{%static 'js/login.js'%}"></script> 
-
-{%block head%}
+<script src="{%static 'js/login.js'%}"></script> {%block head%}
 
 <body background="{%static 'images/home_page/background.jpg'%}">
-  <nav class="navbar navbar-expand-sm bg-dark">
+  <nav class="navbar navbar-expand-sm">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" href="/">
@@ -27,9 +25,9 @@
       </li>
     </ul>
   </nav>
-  <div class="container mt-4">
-    <div class="row justify-content-center">
-      <div class="col-sm-4">
+  <div class="container">
+    <div class="row justify-content-center" align-item-center>
+      <div class="col-sm-4 align-self-center">
         <div class="formcard card">
           <div class="card-header">
             <span class="fa fa-sign-in-alt fa-lg"></span>
@@ -37,13 +35,13 @@
           </div>
           <div class="card-body">
             <form method='POST'> {%csrf_token%} {{content}}
-              <br> Dont have an account?
-              <a href="/register" style="color:lightblue;">
-                Create one
-              </a>
               <button class="btn btn-dark mt-4" type="submit">
-                login
+                Login
               </button>
+              <br> Dont have an account?
+              <a href="/register" style="color:aquamarine;">
+              Create One!
+              </a>
             </form>
           </div>
         </div>
