--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -27,10 +27,10 @@
             </li>
         </ul>
     </nav>
-    <div class="container mt-4">
-        <div class="row">
+    <div class="container">
+        <div class="row justify-content-center">
             <div class="col-sm-4">
-                <div class="card  formcard">
+                <div class="card formcard">
                     <div class="card-header">
                         Register
                     </div>
