--- a/templates/channels.html
+++ b/templates/channels.html
@@ -1,47 +1,41 @@
 {%extends 'home.html' %} {%load static%} {%block head%}
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark">
-        <ul class="navbar-nav">
+<body class="stadium-back" background="{%static 'images/channel_page/background.jpg'%}">
+    <nav class="navbar navbar-expand-sm  ">
+        <ul class="navbar-nav ">
             <li class="nav-item">
                 <a class="nav-link" href="/">
-                    <span class='fa fa-home fa-lg'></span>
+                    <span class='fa fa-home fa-lg'></span><br>
                     Home
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/teams/">
-                    <span class='fa fa-users fa-lg'></span>
+                    <span class='fa fa-users fa-lg'></span><br>
                     Teams
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/stadiums/">
-                    <span class='fa fa-road fa-lg'></span>
+                    <span class='fa fa-road fa-lg'></span><br>
                     Stadiums
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link navactive" href="/channels/">
-                    <span class='fa fa-tv fa-lg'></span>
+                    <span class='fa fa-tv fa-lg'></span><br>
                     Channels
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/matches/">
-                  <span class='fa fa-futbol fa-lg'></span>
-                  Matches
+                    <span class='fa fa-futbol fa-lg'></span><br>
+                    Matches
                 </a>
             </li>
         </ul>
-        {%if request.user.is_authenticated%}
-        <a href="/logout/" style="margin-left:900px">
-            <span class="fa fa-sign-out-alt fa-lg"></span>
-            Logout
-        </a>
-        {% endif %}
     </nav>
-    <div class="col-sm-4">
+    <div class="col-2 ">
         <nav class='menu-ui'>
             <a href='#' class='active' data-filter='all'>Show all</a>
             <a href='#' data-filter='English'>English</a>
@@ -54,7 +48,7 @@
             <a href='#' data-filter='Indonesian'>Indonesian</a>
         </nav>
     </div>
-    <div class="col-sm-6 float-right">
+    <div class="col-10 float-right">
         <div id='map'></div>
         <script>
             var data = JSON.parse('{{channels}}'.replace(/&quot;/g, '"').replace(/&#39;/g, ""));
