--- a/templates/home.html
+++ b/templates/home.html
@@ -22,54 +22,58 @@
 {%block head%}
 
 <body background="{%static 'images/home_page/background.jpg'%}">
-  <nav class="navbar navbar-expand-sm bg-dark">
-    <ul class="navbar-nav">
-      <li class="nav-item">
+  <nav class="navbar navbar-expand-sm  ">
+    <ul class="navbar-nav ">
+      <li class="nav-item" >
         <a class="nav-link navactive" href="/">
           <span class='fa fa-home fa-lg'></span>
+          <br>
           Home
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/teams/">
-          <span class='fa fa-users fa-lg'></span>
+          <span class='fa fa-users fa-lg'></span><br>
           Teams
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/stadiums/">
-          <span class='fa fa-road fa-lg'></span>
+          <span class='fa fa-road fa-lg'></span><br>
           Stadiums
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/channels/">
-          <span class='fa fa-tv fa-lg'></span>
+          <span class='fa fa-tv fa-lg'></span><br>
           Channels
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/matches/">
-          <span class='fa fa-futbol fa-lg'></span>
+          <span class='fa fa-futbol fa-lg'></span><br>
           Matches
         </a>
       </li>
+      <li class="nav-item">
+        {%if request.user.is_authenticated%}
+        <a class="nav-link" href="logout/">
+          <span class="fa fa-sign-out-alt fa-lg"></span><br>
+          Logout
+        </a>
+        {%else%}
+        <a class="nav-link" href="login/">
+          <span class="fa fa-sign-in-alt fa-lg"></span><br>
+          Login
+        </a>
+        {% endif %}
+      </li>
     </ul>
-    {%if request.user.is_authenticated%}
-    <a href="logout/" style="margin-left:900px">
-      <span class="fa fa-sign-out-alt fa-lg"></span>
-      Logout
-    </a>
-    {%else%}
-    <a href="login/" style="margin-left:900px">
-      <span class="fa fa-sign-in-alt fa-lg"></span>
-      Login
-    </a>
-    {% endif %}
   </nav>
   <div class="container mt-4">
     <div class="row">
-      <div class="col-sm-5">
+      <div class="col-0 col-md-3"></div>
+      <div class="col-12 col-md-6">
         <div class="card register-card">
           <div class="card-header">
             Nostalgic tour to FIFA World Cup 2018!
@@ -83,8 +87,8 @@
           </div>
         </div>
       </div>
+      <div class="col-3"></div>
     </div>
-  </div>
   </div>
 </body>
 {%endblock%}
