--- a/templates/matches.html
+++ b/templates/matches.html
@@ -1,58 +1,52 @@
 {% extends 'home.html' %} {%load static%} {%block head%}
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark">
-        <ul class="navbar-nav">
+<body style="background-color:rgb(221, 199, 173);">
+    <nav class="navbar navbar-expand-sm  ">
+        <ul class="navbar-nav ">
             <li class="nav-item">
-                <a class="nav-link " href="/">
-                    <span class='fa fa-home fa-lg'></span>
+                <a class="nav-link" href="/">
+                    <span class='fa fa-home fa-lg'></span><br>
                     Home
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/teams/">
-                    <span class='fa fa-users fa-lg'></span>
+                    <span class='fa fa-users fa-lg'></span><br>
                     Teams
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/stadiums/">
-                    <span class='fa fa-road fa-lg'></span>
+                    <span class='fa fa-road fa-lg'></span><br>
                     Stadiums
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/channels/">
-                    <span class='fa fa-tv fa-lg'></span>
+                    <span class='fa fa-tv fa-lg'></span><br>
                     Channels
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item ">
                 <a class="nav-link navactive" href="/matches/">
-                    <span class='fa fa-futbol fa-lg'></span>
+                    <span class='fa fa-futbol fa-lg'></span><br>
                     Matches
                 </a>
             </li>
         </ul>
-        {%if request.user.is_authenticated%}
-        <a href="/logout/" style="margin-left:900px">
-            <span class="fa fa-sign-out-alt fa-lg"></span>
-            Logout
-        </a>
-        {% endif %}
     </nav>
     <div class="container-fluid">
         <div class="row mt-2">
-            <div class="col-sm-6" style="zoom:70%">
+            <div class="col-sm-6 center" style="zoom:70%">
                 <h4>FIFA World Cup 2018 Bracket</h4>
-                <div class="row filt">
+                <div class="row center filt">
                     <button class="btn btn-outline-dark" data-filter="all" style="margin:6px">Show all</button>
                     <button class="btn btn-outline-dark" data-filter="round_16" style="margin:6px">Round of 16</button>
                     <button class="btn btn-outline-dark" data-filter="round_8" style="margin:6px">Quarter-Finals</button>
                     <button class="btn btn-outline-dark" data-filter="round_4" style="margin:6px">Semi-Finals</button>
                     <button class="btn btn-outline-dark" data-filter="round_2" style="margin:6px">Final</button>
                 </div>
-                <main id="tournament" class="tournament" style="background-color: darkslategray; color:white; padding:6px">
+                <main id="tournament" class="tournament">
                     <ul id="round-16" class="r16 round round-1">
                         <li class="spacer">&nbsp;</li>
                     </ul>
