--- a/templates/stadiums.html
+++ b/templates/stadiums.html
@@ -1,55 +1,37 @@
 {% extends 'home.html' %} {%load static%} {%block head%}
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark">
-        <ul class="navbar-nav">
+<body background="{%static 'images/stadium_page/background.png'%}">
+    <nav class="navbar navbar-expand-sm  ">
+        <ul class="navbar-nav ">
             <li class="nav-item">
-                <a class="nav-link " href="/">
-                    <span class='fa fa-home fa-lg'></span>
-                    Home
+                <a class="nav-link" href="/">
+                    <span class='fa fa-home fa-lg'></span><br> Home
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/teams/">
-                    <span class='fa fa-users fa-lg'></span>
-                    Teams
+                    <span class='fa fa-users fa-lg'></span><br> Teams
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link navactive" href="/stadiums/">
-                    <span class='fa fa-road fa-lg'></span>
-                    Stadiums
+                    <span class='fa fa-road fa-lg'></span><br> Stadiums
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/channels/">
-                    <span class='fa fa-tv fa-lg'></span>
-                    Channels
+                    <span class='fa fa-tv fa-lg'></span><br> Channels
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/matches/">
-                  <span class='fa fa-futbol fa-lg'></span>
-                  Matches
+                    <span class='fa fa-futbol fa-lg'></span><br> Matches
                 </a>
             </li>
         </ul>
-        {%if request.user.is_authenticated%}
-        <a href="/logout/" style="margin-left:900px">
-            <span class="fa fa-sign-out-alt fa-lg"></span>
-            Logout
-        </a>
-        {% endif %}
     </nav>
     <div class="container-fluid">
         <div class="row mt-4 ">
-            <div class="col-sm-6">
-                <div id="exampleModal" tabindex="-1">
-                    <h3 id="marker_title" class=""></h3>
-                    <p id="marker_city" class=""></p>
-                    <img id="marker_content">
-                </div>
-            </div>
             <div class="col-sm-6 float-right">
                 <div id='map'></div>
                 <script>
@@ -57,6 +39,18 @@
                     var secretToken = '{{secretToken}}';
                 </script>
                 <script src="{%static 'js/stadiums.js'%}"></script>
+            </div>
+            <div class="col-sm-6">
+                <img width="500px" id ="cat-image" src="{%static 'images/stadium_page/image_stadium.png'%}">
+                <div id="exampleModal" class="stadium-text" tabindex="-1">
+                    <div class="card">
+                        <div class="card-header stadium-card">
+                            <h3 id="marker_title" class=""></h3>
+                            <p id="marker_city" class=""></p>
+                        </div>
+                        <img class="card-img-top" id="marker_content">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
