--- a/templates/teams.html
+++ b/templates/teams.html
@@ -1,45 +1,34 @@
 {% extends 'home.html' %} {%load static%} {%block head%}
 
-<body>
-    <nav class="navbar navbar-expand-sm bg-dark">
-        <ul class="navbar-nav">
+<body background="{%static 'images/teams_page/background.jpg'%}">
+    <nav class="navbar navbar-expand-sm  ">
+        <ul class="navbar-nav ">
             <li class="nav-item">
-                <a class="nav-link " href="/">
-                    <span class='fa fa-home fa-lg'></span>
-                    Home
+                <a class="nav-link" href="/">
+                    <span class='fa fa-home fa-lg'></span><br> Home
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link navactive" href="/teams/">
-                    <span class='fa fa-users fa-lg'></span>
-                    Teams
+                <a class="nav-link  navactive" href="/teams/">
+                    <span class='fa fa-users fa-lg'></span><br> Teams
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/stadiums/">
-                    <span class='fa fa-road fa-lg'></span>
-                    Stadiums
+                    <span class='fa fa-road fa-lg'></span><br> Stadiums
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/channels/">
-                    <span class='fa fa-tv fa-lg'></span>
-                    Channels
+                    <span class='fa fa-tv fa-lg'></span><br> Channels
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/matches/">
-                  <span class='fa fa-futbol fa-lg'></span>
-                  Matches
+                    <span class='fa fa-futbol fa-lg'></span><br> Matches
                 </a>
             </li>
         </ul>
-        {%if request.user.is_authenticated%}
-        <a href="/logout/" style="margin-left:900px">
-            <span class="fa fa-sign-out-alt fa-lg"></span>
-            Logout
-        </a>
-        {% endif %}
     </nav>
     <div class="container-fluid">
         <div class="row mt-4 ">
